[tool.poetry]
name = "webhook2mqtt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-async = {extras = ["aiohttp"], version = "^22.2.0"}
pyyaml = "^6.0.1"
async-cache = "^1.1.1"
aiohttp-debugtoolbar = "^0.6.0"
aiohttp-devtools = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
